# budgie-desktop-branding

./: .gitignore  Makefile.am  README.md  README.rst  autogen.sh  configure.ac  meson.build  meson_options.txt  meson_post_install.sh  mkrelease.sh
env/: 50-budgie-accessibility.sh  Makefile.am  meson.build
icon/: Makefile.am  index.theme
lightdm/: 20_budgie_material.conf  Makefile.am  meson.build
schemas/: Makefile.am  com.solus-project.icon-tasklist.gschema.override  meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.interface.gschema.override
schemas/budgie/: Makefile.am  com.solus-project.icon-tasklist.gschema.override  meson.build  org.freedesktop.ibus.panel.gschema.override
schemas/gnome/: Makefile.am  meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.desktop.wm.preferences.gschema.override  org.gnome.nautilus.icon-view.gschema.override
schemas/livecd/: Makefile.am  com.solus-project.icon-tasklist.gschema.override  com.solus-project.software-center.gschema.override  meson.build  org.gnome.desktop.screensaver.gschema.override
schemas/material/: Makefile.am  com.solus-project.budgie-menu.gschema.override  com.solus-project.budgie-panel.gschema.override  meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.desktop.wm.preferences.gschema.override  org.gnome.nautilus.desktop.gschema.override  org.gnome.nautilus.icon-view.gschema.override  solus-material.layout  x.dm.slick-greeter.gschema.override
