AC_INIT([Budgie Desktop Branding], 2, [ikey@solus-project.com], [budgie-desktop-branding], [https://solus-project.com/])
AM_INIT_AUTOMAKE([-Wno-portability no-dist-gzip dist-xz foreign subdir-objects])
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIG_FILES([Makefile
                icon/Makefile
                schemas/Makefile
                schemas/budgie/Makefile
                schemas/gnome/Makefile
                schemas/livecd/Makefile])
AC_OUTPUT
