EXTRA_DIST = \
	org.gnome.desktop.background.gschema.override \
	org.gnome.desktop.interface.gschema.override \
	org.gnome.desktop.wm.preferences.gschema.override

overridesdir = \
	$(datadir)/glib-2.0/schemas

overrides_DATA = \
	org.gnome.desktop.background.gschema.override \
	org.gnome.desktop.interface.gschema.override \
	org.gnome.desktop.wm.preferences.gschema.override
