GNOME_SCHEMAS = \
	org.gnome.desktop.background.gschema.override \
	org.gnome.desktop.interface.gschema.override \
	org.gnome.desktop.wm.preferences.gschema.override

BUDGIE_SCHEMAS = \
	com.solus-project.icon-tasklist.gschema.override

EXTRA_DIST = \
	$(GNOME_SCHEMAS) \
	$(BUDGIE_SCHEMAS)

overridesdir = \
	$(datadir)/glib-2.0/schemas

overrides_DATA = \
	$(GNOME_SCHEMAS) \
	$(BUDGIE_SCHEMAS)
